# predictive-maintenance-copilot

./: .gitignore  README.md  docker-compose.yml  start_all.bat  start_all.ps1  stop_all.bat  stop_all.ps1
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: b2c3a1e4f5d6_phase6_carbon_core.py  c3d4b2f5a6e7_phase8_regulatory_reports.py  d4e5c3a6b7f8_phase7_orgs_sites_roles.py  d7d1f1965f5a_initial_schema.py  e5f6d4a7c8b9_phase10_audit_ledger.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  worker.py
backend/app/api/: admin.py  (+14 more)
backend/scripts/: carbon_live_check.py  celery_check.py  delete_check.py  detect_check.py  fleet_check.py  gen_sample_data.py  ingest_live_check.py  live_check.py  org_live_check.py  rag_check.py  rag_section_check.py  reports_live_check.py  reset_and_seed.py  seed_carbon.py  smoke_e2e.py  spark_check.py  start_mlflow.ps1  start_worker.ps1
backend/tests/: test_anomaly.py  test_audit.py  test_carbon.py  test_etl.py  test_rbac.py  test_reporting.py
docs/: architecture.md  competitive-landscape.md  esg.md  phase9-edge.md  powerbi.md  product-vision.md
docs/images/: README.md
edge-agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
edge-agent/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
gateway/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  main.go  main_test.go
(+38 files in other folders)
